email auth working

--- a/public/secondary.css
+++ b/public/secondary.css
@@ -313,7 +313,7 @@ border: 2px solid !important;
   }
   
   h1 {
-    color:white;
+    color:gray;
   }
   
   h2 {
@@ -322,7 +322,7 @@ border: 2px solid !important;
   
   p {
     
-    color:white;
+    color:gray;
   }
   
   #cat_back {
