--- a/views/login.erb
+++ b/views/login.erb
@@ -2,11 +2,11 @@
 <p> Your name and email was not saved. Please include all required fields.</p>
 <%end%>
 
-<h1>Hi. Tell us about yourself. </h1> 
+<h1>Hi. Please login </h1> 
 
-<form action="/save_owner">
-  <p> Name (required): <input type="text" placeholder="name" name="name" value="<%= params["name"]%>" required></p>
-  <p> Email: <input type="email" placeholder="your email" name="email" value="<%= params["email"]%>" required></p>
+<form action="/authorize">
+  
+  <p> Email: <input type="email" placeholder="your email" name="email" value="" required></p>
   <p> Password: <input type="text" pattern=".{5,10}" placeholder="password" name="password" value="" required title="5 to 10 characters"></p>
   <p> <input type="submit" value="submit"></p>
 </form>
