--- a/views/login.erb
+++ b/views/login.erb
@@ -1,5 +1,5 @@
 <% if @error %>
-<p> Your name and email was not saved. Please include all required fields.</p>
+<p> Wrong password or email combination.</p>
 <%end%>
 
 <h1>Hi. Please login </h1> 
