--- a/views/owners/see_profile.erb
+++ b/views/owners/see_profile.erb
@@ -82,19 +82,17 @@
   
    
 <div id="pets">
-  <%pets = Pet.where("owner_id", @owner.id)%>
+  <%@pets = Pet.where(owner_id: @owner.id)%>
+  <%@events = @pets.events%>
   
-  <% pets.each do |pet| %>
-  <p><h2> <%=pet.name%></h2> <a href="/edit_pet/<%=pet.id%>">edit name</a> <a href="/delete_pet/<%=pet.id%>"><br>delete pet</br></a><%@petid = pet.id%></p>
-  <%@petsandevents.each do |hash|%>
-  <% if hash["pet"] == @petid%>
-    <b><%= hash["name"]%></b> - date: <%= hash["date"]%> notes: <%= hash["comment"]%> - <%@event = Event.find(hash["id"])%> due again: <%=@date = @event.increment_date(@event.date, @event.reminder_time.to_i)%> 
-      <a href ="/delete_event_bridge/<%=@petid%>/<%=hash["id"]%>/<%=@owner.id%>">delete from pet</a>
-      <% end %>
-      <% end %>
-      <% end %>
-
-      <!-- add pet -->
+  <% @pets.each do |pet| %>
+  <p><h2> <%=pet.name%></h2> <a href="/edit_pet/<%=pet.id%>">edit name</a> <a href="/delete_pet/<%=pet.id%>"><br>delete pet</br></a></p>
+  <%@events.each do |event|%>
+  <p><%event.name%> - <%event.date%> - <%event.reminder_time%> - <%event.comment%> - <a href ="/delete_event_bridge/<%=pet.id%>/event.id/<%=@owner.id%>">delete from pet</a></p>
+  <%=end%>
+  <%=end%>
+  
+  <!-- add pet -->
       <h2><a href="/add_pet/<%=@owner.id %>">Add a Pet</a></h2>
       <!-- edit user profile -->
     </div>
