--- a/views/categories/see_categories.erb
+++ b/views/categories/see_categories.erb
@@ -5,4 +5,4 @@ Click on a Category to Edit:
 <a href = "/delete_category/<%= category.id %>"> delete category</a></p>
 <% end %>
 
-Or <a href="/add_category">  add category  </a>
+<p>Or <a href="/add_category"> add category</a></p>
