--- a/views/user_menu.erb
+++ b/views/user_menu.erb
@@ -54,7 +54,7 @@
       </a>
     </div>
     <div class="icon4">
-      <a href="categories/see_categories">
+      <a href="/see_categories">
         <img src="/pawmate-edit-category.svg" type="image/svg+xml" class="icons">
         <p> edit categories </p>
       </a>
