--- a/views/events/save_event_success.erb
+++ b/views/events/save_event_success.erb
@@ -1,6 +1,6 @@
 <h1><%=@category.name%> Saved!</h1>
 <p>Name: <%= @event.name %> </p>
-<p>For: <%=@string.to_sentence%>
+<p>For: <%=@event.pets%>
 <p>Date: <%=@event.date%> </p>
 <p>Reminder Time: <%=@event.reminder_time%> days </p>
 <p>notes: <%=@event.comment%></p>
