--- a/views/owners/see_profile.erb
+++ b/views/owners/see_profile.erb
@@ -21,7 +21,7 @@
       events
     </div>
     <div id="square_button2">
-     pets
+      pets
     </div>
  
   </div>
@@ -29,30 +29,82 @@
 
   <div id="cat_back">
     
-<!-- listing pets to edit or delete -->
-<!-- or each pet, show the corresponding events. -->
-<!-- or for each event, show details and pets involved. --> <!-- ## this will be the join table. -->
-<!-- both! -->
-  #TODO
-   
-<div id="pets">
-  <%@pets = Pet.where(owner_id: @owner.id)%>
-  <%if @pets.blank?%>
-  "You have no pets. Add one here."
-  <%else%>
- <% @pets.each do |pet| %>
-  <p><h2> <%=pet.name%></h2> <a href="/edit_pet/<%=pet.id%>">edit name</a> <a href="/delete_pet/<%=pet.id%>"><br>delete pet</br></a></p>
-   <%@events = @pets.events%>
-    <%if @events.blank?%>
-    <%else%>
-  <%@events.each do |event|%>
-  <p><%event.name%> - <%event.date%> - <%event.reminder_time%> - <%event.comment%> - <a href ="/delete_event_bridge/<%=pet.id%>/event.id/<%=@owner.id%>">delete from pet</a></p>
-    <%end%>
-    <%end%>
-  <%end%>
-  <%end%>
+    <div id="events">
+      <%@pets = Pet.where(owner_id: @owner.id)%>
+      <%if @pets.blank?%>
+      <h2>You have no pets yet! <h2><a href="/add_pet/<%=@owner.id %>">Add a Pet</a></h2><h2>
+        <%else%>
+        
+       
+          
+     
+        <% Category.all.each do |category| %>
+        <a href = "/create_event/<%= category.id %>/<%= @owner.id %>" class="blue">
+          <%if category.name == "Medicine"%>
+          <div id="icons_wrapper">
+            <div id="add_pet_event">add a pet event:</div>
+            <div id="medicine_mobile">
+              <div class="medicine_icon"></div>
+              <div class="center"> 
+                <%= category.name %>
+              </div>
+            </div>
+          </a> 
+          <% end %>
+          <%if category.name == "Grooming"%>
+          <div id="medicine_mobile">
+            <div class="grooming_icon"></div>
+            <div class="center"> 
+              <%= category.name %>
+            </div>
+          </div>
+        </a> 
+        <% end %>
+     
+        <%if category.name == "Vet Visit"%>
+        <div id="medicine_mobile">
+          <div class="vet_visit_icon"></div>
+          <div class="center"> 
+            <%= category.name %>
+          </div>
+        </div>
+      </a> 
+      <% end %>
+      <% end %>
+      <% end %>
+      
   
-  <!-- add pet -->
+      
+      </div>
+    <div style="clear:both"></div>
+  </div> 
+   
+    
+    <!-- listing pets to edit or delete -->
+    <!-- or each pet, show the corresponding events. -->
+    <!-- or for each event, show details and pets involved. --> <!-- ## this will be the join table. -->
+    <!-- both! -->
+    
+   
+    <div id="pets">
+  
+      <%@pets = Pet.where(owner_id: @owner.id)%>
+      <%if @pets.nil?%>
+      <h2>You have no pets yet!</h2>
+      <%else%>
+      <% @pets.each do |pet| %>
+      <p><h2> <%=pet.name%></h2> <a href="/edit_pet/<%=pet.id%>">edit name</a> <a href="/delete_pet/<%=pet.id%>"><br>delete pet</br></a></p>
+      <%@events = pet.events%>
+      <%if @events.blank?%>
+      <%else%>
+      <%@events.each do |event|%>
+      <p><%=event.name%> - date:<%=event.date%> - reminder time:<%=event.reminder_time%> days - comments:<%=event.comment%> - <a href ="/delete_event_bridge/<%=pet.id%>/event.id/<%=@owner.id%>">delete from pet</a></p>
+      <%end%>
+      <%end%>
+      <%end%>
+      <%end%>
+  
+      <!-- add pet -->
       <h2><a href="/add_pet/<%=@owner.id %>">Add a Pet</a></h2>
       <!-- edit user profile -->
     </div>
