--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,9 +11,9 @@
   <header>
     <div id="header">
       <a href="/home">
-        <img src="/logo.svg" type="image/svg+xml" class="logo">
+        <img src="logo.svg" type="image/svg+xml" class="logo">
       </a>
-      <img src="/hamburger.svg" type="image/svg+xml" id="hamburger">
+      <img src="hamburger.svg" type="image/svg+xml" id="hamburger">
     </a>
   </header>
   
