--- a/views/layout-admin.erb
+++ b/views/layout-admin.erb
@@ -3,6 +3,7 @@
   <title> PawMate</title>
   <link href='http://fonts.googleapis.com/css?family=Dosis:300,500' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/main.css">
+   <link rel="stylesheet" href="/animate.css">
   <meta name="viewport" content="initial-scale=1">
 </head>
 <nav>
@@ -12,7 +13,7 @@
   <div class="home">
     <header>
       <a href="/home">
-        <img src="/logo.svg" type="image/svg+xml" class="logo">
+        <img src="logo.svg" type="image/svg+xml" class="logo flipInY">
       </a>
     </header>
 
