--- a/views/login.erb
+++ b/views/login.erb
@@ -4,7 +4,7 @@
 
 <h1>Hi. Please login </h1> 
 
-<form action="/authorize">
+<form action="/authorize" method="post">
   
   <p> Email: <input type="email" placeholder="your email" name="email" value="" required></p>
   <p> Password: <input type="text" pattern=".{5,10}" placeholder="password" name="password" value="" required title="5 to 10 characters"></p>
