--- a/views/ux_layout.erb
+++ b/views/ux_layout.erb
@@ -10,11 +10,8 @@
 <body>
   <header>
     <div id="header">
-      <!-- <a href="/home">
-        <img src="/logo2.svg" type="image/svg+xml" class="logo">
-      </a> -->
       <a href="/home">
-        <img src="logo.svg" type="image/svg+xml" class="logo">
+        <img src="/logo.svg" type="image/svg+xml" class="logo">
       </a>
       <img src="hamburger.svg" type="image/svg+xml" id="hamburger">
     </a>
