--- a/views/owners/add_owner.erb
+++ b/views/owners/add_owner.erb
@@ -1,13 +1,10 @@
-<% if @error %>
-<p> Your name and email was not saved. Please include all required fields.</p>
-<%end%>
 
 <h1>Hi. Tell us about yourself. </h1> 
 
-<form action="/save_owner">
+<form action="/save_owner" method="post">
   <p> Name (required): <input type="text" placeholder="name" name="name" value="<%= params["name"]%>" required></p>
   <p> Email: <input type="email" placeholder="your email" name="email" value="<%= params["email"]%>" required></p>
-  <p> Password: <input type="text" pattern=".{5,10}" placeholder="password" name="password" value="" required title="5 to 10 characters"></p>
+  <p> Password: <input type="password" pattern=".{5,10}" placeholder="password" name="password" value="" required title="5 to 10 characters"></p>
   <p> <input type="submit" value="submit"></p>
 </form>
 
